Bug 312674 - When calling recently accessed items for "This Month" the result is not as expected
Summary: When calling recently accessed items for "This Month" the result is not as ex...
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: kioslave - timeline (other bugs)
Version First Reported In: 4.9
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
: 312592 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-05 12:59 UTC by Daniel Kreuter
Modified: 2013-01-11 21:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Kreuter 2013-01-05 12:59:17 UTC
When clicking on This Month in the Recently Accessed area of dolphin places panel, items will be shown on days, where they weren't accessed (f.e. because they didn't exist on that date).

Creating a random file today and it will be shown on each day of the week.

Reproducible: Always

Steps to Reproduce:
1. Create a file (location doesn't matter)
2. Click on "This Month" in the places panel of Dolphin

After these two steps, the newly created file should appear in every of the shown folders, even if the date of the folder should be for the past.
Actual Results:  
The newly created file appears in every folder of the timeline search.

Expected Results:  
The newsly created file should only appear in the result of today.

This bug is still present in KDE 4.9.95
Comment 1 Vishesh Handa 2013-01-09 15:51:51 UTC
Git commit a793e6663d77d643a41bdf773faa8082e30a7259 by Vishesh Handa.
Committed on 09/01/2013 at 10:46.
Pushed by vhanda into branch 'KDE/4.10'.

TimeLine: Fix buildTimelineQuery

Do not return results > from.

M  +1    -1    nepomuk/kioslaves/common/timelinetools.cpp

http://commits.kde.org/kde-runtime/a793e6663d77d643a41bdf773faa8082e30a7259
Comment 2 Vishesh Handa 2013-01-11 21:19:29 UTC
*** Bug 312592 has been marked as a duplicate of this bug. ***