TimeLine: Fix buildTimelineQuery

Do not return results > from.

BUG: 312674